Task is completed and new files of homework are uploaded

--- a/main.ipynb
+++ b/main.ipynb
@@ -20,17 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen importlib._bootstrap>:488: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 216 from C header, got 232 from PyObject\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Importing essential libraries\n",
     "import pandas as pd\n",
@@ -63,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +199,7 @@
        "5            Mumbai   Economy      2.00          4  10712  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +383,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +779,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,13 +837,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Data loading and separating into train, test features\n",
     "model_data = pd.read_csv(filepath_or_buffer = './data/train_ready.csv', sep = ',')\n",
-    "x = model_data.drop(columns = 'price_std')\n",
+    "x = model_data.drop(columns = ['id', 'price_std'])\n",
     "y = model_data['price_std']\n",
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2, random_state = 42)\n",
@@ -1627,6 +1619,32 @@
    "source": [
     "Conclusion : I have tried many machine learning models to solve the problem of prediction of the cost of the flights. Because the quality of the data was astonishingly good, I didn't feel any hardships to create machine learning models. Almost every models just performed well and find the common pattern in the data. But among them the tree based models outperformed when it comes to predicting the price of the flights compared to the other models."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data is preserved successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Extracting five rows of data from the dataset for validation purposes\n",
+    "df[df.index.isin(y_test.sample(5).index)].to_csv(path_or_buf = './data/validation_extraction.csv')\n",
+    "print(\"Data is preserved successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
